Added utility method isPersonValid
Added utility method isPersonValid changed if statement and some returns