@@ -1,6 +1,8 @@
 package team.asd.service;
 
 import lombok.NonNull;
+import org.apache.commons.collections4.CollectionUtils;
+import org.apache.commons.lang3.StringUtils;
 import team.asd.entities.IsPerson;
 
 import java.util.Collections;
@@ -12,15 +14,15 @@ import java.util.stream.Collectors;
 public class PersonService implements IsPersonService {
 	@Override
 	public @NonNull List<IsPerson> collectPersonsWithNameStartsWith(List<IsPerson> personList, String prefix) {
-		if (personList == null || personList.isEmpty())
+		if (CollectionUtils.isEmpty(personList))
 			return Collections.emptyList();
 
-		if (prefix == null || prefix.isEmpty())
+		if (StringUtils.isEmpty(prefix))
 			return personList;
 
 		return personList.stream()
 				.filter(person -> person != null && person.getName() != null)
-				.filter(person -> person.getName() != null && person.getName()
+				.filter(person -> person.getName()
 						.startsWith(prefix))
 				.collect(Collectors.toList());
 	}
@@ -28,11 +30,11 @@ public class PersonService implements IsPersonService {
 	@Override
 	public @NonNull Map<Integer, List<IsPerson>> collectPersonsByAge(List<IsPerson> personList) {
 		if (personList == null || personList.isEmpty()) {
-			return Map.of();
+			return Collections.emptyMap();
 		}
 
 		return personList.stream()
-				.filter(person -> person != null && person.getAge() != null && person.getAge() >= 0)
+				.filter(this::isPersonValid)
 				.collect(Collectors.groupingBy(IsPerson::getAge, Collectors.toList()));
 
 	}
@@ -43,7 +45,7 @@ public class PersonService implements IsPersonService {
 			return 0.0;
 
 		return personList.stream()
-				.filter(person -> person != null && person.getAge() != null && person.getAge() >= 0)
+				.filter(this::isPersonValid)
 				.mapToInt(IsPerson::getAge)
 				.average()
 				.orElse(0.0);
@@ -55,8 +57,12 @@ public class PersonService implements IsPersonService {
 			return new IntSummaryStatistics();
 
 		return personList.stream()
-				.filter(person -> person != null && person.getAge() != null && person.getAge() >= 0)
+				.filter(this::isPersonValid)
 				.mapToInt(IsPerson::getAge)
 				.summaryStatistics();
+	}
+
+	private boolean isPersonValid(IsPerson person) {
+		return person != null && person.getAge() != null && person.getAge() >= 0;
 	}
 }
